--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
